--- a/style.css
+++ b/style.css
@@ -63,7 +63,8 @@ main {
   justify-content: space-around;
 }
 
-.container {
+.container
+ {
   width: 100vw;
   height: 100vw;
   display: flex;
@@ -94,7 +95,6 @@ section {
 .choice-container-3,
 .choice-container-4
  {
-  display: flex;
   margin-bottom: 0.5rem;
   width: 100%;
   background: radial-gradient(circle, rgba(240,230,140,1) 0%, rgba(187,124,33,0.604079131652661) 100%);
@@ -103,24 +103,18 @@ section {
   box-shadow: rgba(60, 64, 67, 2) 0 1px 2px 0,
     rgba(60, 64, 67, 0.15) 0 2px 4px 3px;
   margin: 5px 0;
-  padding: 0px;
+  padding: 10px;
 }
 
-.choice-container:hover {
+.choice-container-1:hover,
+.choice-container-2:hover,
+.choice-container-3:hover,
+.choice-container-4:hover
+{
   cursor: pointer;
   box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
   transform: translateY(-0.1rem);
   transition: transform 150ms;
-}
-
-.choice-prefix {
-  padding: 1.5rem 2.5rem;
-  background-color: #13293d;
-  color: white;
-}
-
-.choice-text {
-padding: 1.5rem;
 }
 
 
